<resources>
    <string name="app_name">Timer de Calorias MWG</string>
    <string name="tempo">Tempo:</string>
    <string name="play_pause">Play / Pause</string>
    <string name="reset">Reset</string>
    <string name="nome_medico">Nome Médico:</string>
    <string name="telefone">Telefone:</string>
    <string name="voltar">Voltar</string>
    <string name="calorias">Calorias:</string>
    <string name="cal_inicial">0.00</string>

</resources>
